--- a/music/templates/album/album_detail.html
+++ b/music/templates/album/album_detail.html
@@ -1,12 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+
+        <div class="col-md-12 pt-3">
+
+            <nav aria-label="breadcrumb">
+
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item">
+                        <a href="{% url 'base' %}">Главная</a>
+                    </li>
+                    <li class="breadcrumb-item">
+                        <a href="{% url 'artist_detail' artist_slug=album.artist.slug %}">
+                            {{ album.artist.name }}
+                        </a>
+                    </li>
+                    <li class="breadcrumb-item active" aria-current="page">
+                        {{ album.name }}
+                    </li>
+                </ol>
+
+            </nav>
+            <div class="row">
+
+                <div class="col-md-4">
+                    <img src="{{ album.image.url }}" class="img-fluid">
+                </div>
+                <div class="col-md-8">
+                    <h4>{{ album.artist.name }} - {{ album.name }}</h4>
+                    <hr>
+                    <p>Дата выхода: {{ album.release_date|date:"d-m-Y" }}</p>
+                    <p>Жанр: {{ album.artist.genre.name }}</p>
+                </div>
+            </div>
+
+        </div>
+
+{% endblock content %}
