--- a/music/templates/base.html
+++ b/music/templates/base.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="{% url 'base' %}">MusInfo</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,18 +20,18 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'base' %}">Главная</a>
               </li>
-              {% if not request.user.is_authenticated %}
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'login' %}">Авторизация</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'genres' %}">Жанры</a>
               </li>
-                <li class="nav-item">
-                <a class="nav-link" href="{% url 'registration' %}">Регистрация</a>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'artists' %}">Исполнители</a>
               </li>
-              {% else %}
-                <li class="nav-item">
-                <a class="nav-link" href="{% url 'logout' %}">Выйти</a>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Контакты</a>
               </li>
-              {% endif %}
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Новости</a>
+              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Dropdown
@@ -47,16 +47,55 @@
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
               </li>
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            
+            <ul class="navbar-nav mb-2 mb-lg-0 ml-0">
+              {% if not request.user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">Авторизация</a>
+              </li>
+                <li class="nav-item">
+                <a class="nav-link" href="{% url 'registration' %}">Регистрация</a>
+              </li>
+              {% else %}
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'search' %}">Поиск</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">Выйти</a>
+              </li>
+              {% endif %}
+            </ul>
           </div>
         </div>
       </nav>
       <div class='container'>
         {% block content %}
-        {{ request.user }}
+        <h4 class="text-center">Главная</h4>
+        <hr>
+        <!-- <div class="col-md-12">
+          <div class="row">
+            {% for album in albums %}
+                    <div class="card col-md-3 p-0 mb-3 mt-3">
+
+                        <img src="{{ album.image.url }}" class="card-img-top">
+                        <div class="card-body text-center">
+                        <h5 class="card-title"><a href="{{ album.artist.get_absolute_url }}" class="text-decoration-none">
+                            {{ album.artist.name }}
+                        </a></h5>
+                        <h5 class="card-title"><a href="{{ album.get_absolute_url }}" class="text-decoration-none">
+                            {{ album.name }}
+                        </a></h5>
+                        </div>
+
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Дата релиза: <strong>{{ album.release_date|date:"d-m-Y" }}</strong></li>
+                            <li class="list-group-item">Жанр: <strong>{{ album.artist.genre.name }}</strong></li>
+                        </ul>
+                    </div>
+            {% endfor %}
+
+          </div>
+        </div> -->
         {% endblock content %}
       </div>
 </body>
